# TPG-Taller-Left4dead-Grupo1

./: .gitignore  .pre-commit-config.yaml  Backlog TPG.txt  CMakeCache.txt  CMakeLists.txt  LICENSE  Left4Dead.sh  Left4DeadServer.sh  Makefile  README.md  build.sh  game_config.yaml  installer.sh  statistics.txt  sup.txt  valgrind-output.txt
client/: Animation.cpp  Animation.h  Exception.cpp  GraphicsEntityHolder.cpp  GraphicsEntityHolder.h  Makefile  Player.cpp  Player.h  SdlException.cpp  SdlException.h  SdlWindow.cpp  SdlWindow.h  assets.qrc  assets_ending.qrc  audio_holder.cpp  audio_holder.h  camera.cpp  camera.h  choosesoldier.cpp  choosesoldier.h  choosesoldier.ui  client_client.cpp  client_client.h  client_config.yaml  client_enum.h  client_protocol.cpp  client_protocol.h  creatematch.cpp  creatematch.h  creatematch.ui  ending_screens_2.pro  entity.cpp  entity.h  game_state.cpp  game_state.h  graphics.cpp  graphics.h  graphics_entity.cpp  graphics_entity.h  graphics_qt.cpp  (+35 more)
client/NOT-USED sdl/: CMakeLists.txt
client/NOT-USED sdl/src/: CMakeLists.txt
client/Qt/: create_match.cpp  create_match.h  create_match.ui  create_match2.cpp  create_match2.h  create_match2.ui  joinmatch.cpp  joinmatch.h  joinmatch.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  seconddialog.ui  testing_connected_screens.pro
client/main/: main.cpp
client/qt/: choosesoldier.cpp  choosesoldier.h  creatematch.cpp  creatematch.ui  joinmatch.cpp  main.cpp  mainwindow.cpp  qt_initial_screens  qt_initial_screens.pro
client/sdl/: CMakeLists.txt  README.md  sup.txt
client/sdl/libs/: Animation.cpp  Animation.h  Exception.h  SdlException.h  SdlTexture.cpp  SdlTexture.h
client/sdl/src/: GraphicsEntityHolder.cpp  GraphicsEntityHolder.h  Player.cpp  Player.h  main.h  mainPruebaAbril.cpp
common/: action.h  client_protocol.cpp  client_protocol.h  liberror.cpp  liberror.h  moving.cpp  moving.h  queue.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  server_protocol.cpp  server_protocol.h  socket.cpp  socket.h
config/: config.yaml
server/: action.cpp  action.h  action_cheat_infinite_hp.cpp  action_cheat_infinite_hp.h  action_cheat_kill_all_infected.cpp  action_cheat_kill_all_infected.h  action_cheat_spawn_common_infected.cpp  action_cheat_spawn_common_infected.h  action_create_player.cpp  action_create_player.h  action_create_soldier_idf.cpp  action_create_soldier_idf.h  action_create_soldier_p90.cpp  action_create_soldier_p90.h  action_create_soldier_scout.cpp  action_create_soldier_scout.h  action_moving.cpp  action_moving.h  action_reloading.cpp  action_reloading.h  action_shooting.cpp  action_shooting.h  client_accepter.cpp  client_accepter.h  config.cpp  config.h  config_parser.cpp  config_parser.h  entity.cpp  entity.h  entity_crater.cpp  entity_crater.h  entity_infected.cpp  entity_infected.h  entity_infected_common.cpp  entity_infected_common.h  entity_infected_spear.cpp  entity_infected_spear.h  entity_infected_venom.cpp  entity_infected_venom.h  (+59 more)
server/main/: main.cpp
tests/: cheats_tests.cpp  clear_the_zone_test.cpp  common_infected_attack_test.cpp  crater_test.cpp  dead_infected_test.cpp  down_reviving_dead_soldier_test.cpp  dummytest.cpp  game_finish_test.cpp  game_test.cpp  infected_movement_test.cpp  infected_spear_test.cpp  infected_test.cpp  infected_venom_test.cpp  infected_witch_test.cpp  map_test.cpp  movement_test.cpp  player_spawn_test.cpp  player_test.cpp  projectile_venom_test.cpp  reloading_test.cpp  shoot_test.cpp  survival_mode_test.cpp  weapon_idf_test.cpp  weapon_p90_test.cpp  weapon_scout_test.cpp
